# pyxis-smart-account

./: Beaker.toml  Cargo.toml  PLUGIN.md  README.md  package-lock.json
contracts/pyxis-sm-base/: Cargo.toml  NOTICE  README.md
contracts/pyxis-sm-base/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/pyxis-sm-base/src/integration_tests/: instantiate_account_tests.rs  mod.rs  test_setup.rs
contracts/pyxis-sm-base/src/testing/: execute_tests.rs  mod.rs  plugin_tests.rs  recovery_tests.rs  test_setup.rs
contracts/sample-plugin/: Cargo.toml  README.md
contracts/sample-plugin-manager/: Cargo.toml  README.md
contracts/sample-plugin-manager/src/: contract.rs  msg.rs  state.rs
contracts/sample-plugin/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/simple-recovery-plugin/: Cargo.toml  README.md
contracts/simple-recovery-plugin/src/: contract.rs  msg.rs  state.rs
contracts/simple-spendlimit-plugin/: Cargo.toml
contracts/simple-spendlimit-plugin/src/: contract.rs  contract_test.rs  error.rs  lib.rs  msg.rs  state.rs  tracked_msgs.rs
ts/sdk/: README.md  package.json  typedoc.json
ts/sdk/scripts/: chains.js  deploy.js
